# actix-sqlx-example

./: Cargo.toml  README.md
src/: main.rs
src/routes/: mod.rs  sample_route.rs
