[package]
name = "actix-sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.actix-web]
version = "4"

[dependencies.actix-cors]
version = "0.6.1"

[dependencies.sqlx]
version = "0.5"
features = ["runtime-actix-rustls", "postgres", "time", "chrono"]